--- a/src/components/MainFrame.css
+++ b/src/components/MainFrame.css
@@ -37,7 +37,7 @@
     padding: 10px;
     font-size: 20px;
     color: #f5f5f5;
-    font-family: fantasy;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
 
   .para2 {
@@ -46,5 +46,5 @@
     font-size: 20px;
     box-shadow: #f5f5f5;
     color: #f5f5f5;
-    font-family: monospace;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
   }
